--- a/package.json
+++ b/package.json
@@ -1,13 +1,10 @@
 {
   "name": "react-phone-number",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-number-format": "^4.3.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
@@ -30,5 +27,15 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typescript": "^3.7.4",
+    "@testing-library/react": "^9.4.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.24",
+    "@types/node": "^13.1.0",
+    "@types/react": "^16.9.17",
+    "@types/react-dom": "^16.9.4"
   }
 }
